[gd_scene load_steps=7 format=3 uid="uid://da1o6h5521bfu"]

[ext_resource type="Texture2D" uid="uid://dyv34in625jl4" path="res://assets/Tileset1 (1).png" id="1_i50bp"]
[ext_resource type="FontFile" uid="uid://canno1v1nq545" path="res://assets/Fonts/charybdis.regular.ttf" id="2_g5r1g"]
[ext_resource type="Script" path="res://scripts/Items/slots/consumable_slot.gd" id="2_totq1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tvwio"]
texture = ExtResource("1_i50bp")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
2:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
1:9/0 = 0
5:9/0 = 0
0:10/0 = 0
1:10/0 = 0
0:11/0 = 0
1:11/0 = 0
0:12/0 = 0
1:12/0 = 0
0:13/0 = 0
1:13/0 = 0

[sub_resource type="TileSet" id="TileSet_81ubs"]
sources/0 = SubResource("TileSetAtlasSource_tvwio")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pup2k"]

[node name="ConsumableSlot" type="TileMapLayer"]
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 255, 255, 0, 0, 1, 0, 3, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 4, 0, 0, 0)
tile_set = SubResource("TileSet_81ubs")
script = ExtResource("2_totq1")

[node name="Amount" type="Label" parent="."]
offset_left = -24.0
offset_right = 16.0
offset_bottom = 25.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_g5r1g")
horizontal_alignment = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_pup2k")

[node name="SpriteController" type="Node2D" parent="."]

[node name="filter" type="ColorRect" parent="."]
offset_left = -14.0
offset_top = -14.0
offset_right = 14.0
offset_bottom = 14.0
color = Color(0, 0, 0, 0.419608)

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
